Fix media query not working on Safari
Safari on iOS <16.4, which is still widely used (e.g. by the
iPhone 13), doesn't support them.

The max-width media query was rewritten to the range syntax by our
format-on-save setting, so I also disabled that.

--- a/src/client/css/partials/floatingBanner.css
+++ b/src/client/css/partials/floatingBanner.css
@@ -61,7 +61,7 @@
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-@media (width <= 600px) {
+@media (max-width: 600px) {
   .floating-banner {
     padding: var(--padding-sm) 10vw var(--padding-sm) 2.5vw;
   }
